--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,32 @@
+body {
+  background-color: #dddaff;
+}
+
 .App {
   text-align: center;
+  margin-top: 250px;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding: 10px;
+  border-radius: 15px;
+  background-color: black;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
+
+.question {
+  color: #62f0e9;
+}
+
+.buttons {
+  margin-bottom: 10px;
+  color: #62f0e9;
+  border-radius: 15px;
+  background-color: black;
+};
 
 .App-header {
   background-color: #282c34;
