--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 body {
   background-color: #000000;
 }
-
+.Map {
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+}
 .App {
   text-align: center;
   margin-top: 25px;
