--- a/src/App.css
+++ b/src/App.css
@@ -34,4 +34,8 @@ body {
   border-radius: 15px;
   background-color: #333333;
   border: none;
+  outline: none;
+}
+#answer:hover {
+  background-color: purple;
 }
