--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,32 @@
-body {
-  background-color: #000000;
-}
-.Map {
-  margin: auto;
-  width: 60%;
-  padding: 10px;
+body
+  {
+    padding : 20px;
+    background: black;
+    text-align: center;
+    font-family: 'arial';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+.container-fluid{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .App {
   text-align: center;
-  margin-top: 25px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin: 0 auto 0 auto;
   padding: 10px;
-  border-radius: 15px;
   background-color: black;
+}
+.Map {
+  margin: 0 auto 0 auto;
+  height: '50vh';
+  padding: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(0%);
 }
 
 #play_button, #play_again{
