--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,11 @@ body
 }
 
 #quiz_one, #end_screen_1 {
-  color: #156F9D;
+  color: #344F97;
 }
 
 #quiz_two, #end_screen_2{
-  color: #4A67C7;
+  color: #344F97;
 }
 
 #quiz_one, #quiz_two{
